@@ -60,6 +60,11 @@ APP_DEFAULT_LOCALE=en
 # Can be true or false. Default to false.
 APP_DISABLE_SIGNUP=true
 
+# Set trusted proxy IP addresses.
+# To trust all proxies that connect directly to your server, use a "*".
+# To trust one or more specific proxies that connect directly to your server, use a comma separated list of IP addresses.
+APP_TRUSTED_PROXIES=
+
 # Frequency of creation of new log files. Logs are written when an error occurs.
 # Refer to config/logging.php for the possible values.
 LOG_CHANNEL=daily
